--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,91 +1,30 @@
-*{
-    box-sizing: border-box;
+* {
+    margin: 0;
+    position: 0;
 }
-body{
-    font-family: Tahoma, sans-serif;
-    line-height: 1.5;
-    color: #333;
-}
-.section{padding: 30px 10%;}
-.header{
-    text-align: center;
-    font-size: 24px;
-    margin-top: 80px;
-}
-.header span{
-    display: block;
-    font-weight: 300;
-}
-.header strong{
-    font-weight: 900;   
-    text-transform: uppercase;
-}
-.main{text-align: center;
-    margin-top: 80px;
-}
-.video, .form{
-    display: inline-block;
-    vertical-align: top;
-}
-.form {
-    margin-left: 30px;
-    text-align: center;
-    border: 5px solid #3c3cdd;
-    padding: 20px;
-}
-.form input{
-        width: 300px;
-    padding: 17px;
-    font-size: 18px;
-    border: 1px solid #333;
-    margin-top: 10px;
-    display: block;
-}
-.form-header{
-    text-align: center;
-    font-weight: 900;
-    font-size: 20px;    
-    margin-bottom: 20px;
 
+.container {
+    margin-top: 140px;
 }
-.btn{
-    
-    font-size: 18px;
-    font-weight: 900;
-    color: #fff;
-    background-color: #2727d9;
-    border: none;
-    width: 300px;
-    height: 60px;
-    display: block;
-    margin: 11px auto;
 
-
-
-}
-.col{
+.col-xs-12,
+.col-sm-6,
+.col-md-4,
+.col-lg-2 {
     display: inline-block;
     text-align: center;
-    margin: 10px 50px;
-}
-.feature-header{
-    text-align: center;
-    text-transform: uppercase;
-    font-weight: 900;
-    font-size: 24px;
-}
-.feature{
-    margin: 100px auto;
-    text-align: center;
 }
 
-.clients h2{margin: 60px;}
-.pic{
+h1 {
     text-align: center;
-    margin-bottom: 20px;
+    margin-bottom: 100px;
 }
-.pic img{
-    margin-left: 20px;
-    text-align: center;
-    
+
+p {
+    font-size: 18px;
+    margin-top: 40px;
+}
+
+.bee {
+    height: 136px;
 }
