--- a/lesson_13/less/main.less
+++ b/lesson_13/less/main.less
@@ -64,7 +64,5 @@ img{
 	display:inline-block;
 	vertical-align: top;
 }
-@media (max-width: @screen-xs-max) {  }
-@media (min-width: @screen-sm-min) and (max-width: @screen-sm-max) {  }
-@media (min-width: @screen-md-min) and (max-width: @screen-md-max) {  }
-@media (min-width: @screen-lg-min) {  }
+@media (max-width: @screen-xs-max) { @screen-xs-max:320px; }
+
