--- a/lesson_13/less/main.less
+++ b/lesson_13/less/main.less
@@ -64,5 +64,5 @@ img{
 	display:inline-block;
 	vertical-align: top;
 }
-@media (max-width: @screen-xs-max) { @screen-xs-max:320px; }
+@media (min-width:320px) and (max-width: 600px) { .container{margin:auto;} }
 
