--- a/lesson_13/less/main.less
+++ b/lesson_13/less/main.less
@@ -64,5 +64,5 @@ img{
 	display:inline-block;
 	vertical-align: top;
 }
-@media(min-width:320px){.form{width:90%;margin:auto;};}
+@media(min-width:320px){.form{width:90%;margin:auto;}}
 
