--- a/lesson_13/less/main.less
+++ b/lesson_13/less/main.less
@@ -64,4 +64,4 @@ img{
 	display:inline-block;
 	vertical-align: top;
 }
-@media (max-width:479px)and(min-width:320px){.form{height:auto;width:100%;margin:0;}; .container{margin:0;padding:0;}}
+@media (max-width:479px)and(min-width:320px){.form{height:auto;width:50%;margin:0;}; .container{width:100%;margin:0;padding:0;}}
