--- a/lesson_14/css/style.css
+++ b/lesson_14/css/style.css
@@ -1,5 +1,5 @@
 @import url('https://fonts.googleapis.com/css?family=Open+Sans');
-@import url('http://allfont.ru/allfont.css?fonts=bebas');
+@import url('https://allfont.ru/allfont.css?fonts=bebas');
 @import url('https://fonts.googleapis.com/css?family=Lato');
 @import url('https://fonts.googleapis.com/css?family=Lobster&subset=cyrillic');
 
